--- a/focusmusic.html
+++ b/focusmusic.html
@@ -12,7 +12,7 @@
   <div class="main">
     <nav>
       <ul>
-        <li><a href="./home.html">Home</a></li>
+        <li><a href="./index.html">Home</a></li>
         <li><a href="./howtouse.html">How to use</a></li>
         <li><a href="./aboutme.html">About me</a></li>
         <li><a href="./contact.html">Contact</a></li>
