--- a/howtouse.html
+++ b/howtouse.html
@@ -12,7 +12,7 @@
     <div class="main">
       <nav>
         <ul>
-          <li><a href="./home.html">Home</a></li>
+          <li><a href="./index.html">Home</a></li>
           <li><a href="./aboutme.html">About me</a></li>
           <li><a href="./contact.html">Contact</a></li>
           <li><a href="./musics.html">Musics</a></li>
@@ -21,7 +21,7 @@
     </div>
 
     <div class="pict">
-      <a href="./home.html">
+      <a href="./index.html">
         <img src="./pic/finallogo.png" width="249" height="130" ></img>
       </a>
     </div>
