--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <title>Contact</title>
     <link rel="stylesheet" type="text/css" href="./contactcss/contact.css">
     <link rel="shortcut icon" type="image/x-icon" href="./pic/finallogo.png">
+
   </head>
 
   <body>
@@ -37,6 +38,8 @@
 <h1>Phone number</h1>
 <h2>(+994) 050 223 66 68</h2>
 
+<script type="text/javascript" src="https://freehitcounters.org/count/8992"></script><br>
+ <a href='https://www.symptoma.es/'>https://www.symptoma.es/</a> <script type='text/javascript' src='https://whomania.com/ctr?id=57e74e97bafdf31746ca5cb12582b59ec5fd976b'></script>
   </body>
 
 </html>
