--- a/contact.html
+++ b/contact.html
@@ -38,8 +38,9 @@
 <h1>Phone number</h1>
 <h2>(+994) 050 223 66 68</h2>
 
-<script type="text/javascript" src="https://freehitcounters.org/count/8992"></script><br>
- <a href='https://www.symptoma.es/'>https://www.symptoma.es/</a> <script type='text/javascript' src='https://whomania.com/ctr?id=57e74e97bafdf31746ca5cb12582b59ec5fd976b'></script>
+<a href='https://www.symptoma.es/'>https://www.symptoma.es/</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=51d1fd6d0c560b8674db8a405da87e73a6feaecf'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/798756/t/2"></script>
   </body>
+
 
 </html>
