--- a/musics.html
+++ b/musics.html
@@ -27,62 +27,121 @@
 
   <hr>
 
-  <div class="container">
+  <h1>Music</h1>
 
-    <div class="gallery">
-      <a href="./focusmusic.html">
-      <img src="./pic/111.jpg" style="border-radius: 20%">
-      </a>
+  <div class="player1">
+      <div class="imgBx1">
+        <img src="./pic/maybe.jpg">
+      </div>
+      <audio controls>
+        <source src="./music/Blue Dream - Cheel.mp3" type="audio/mp3">
+      </audio>
     </div>
 
-    <div class="gallery">
-      <a href="./codingmusic.html">
-      <img src="./pic/222.jpg" style="border-radius: 20%">
-      </a>
-    </div>
+     <div class="player2">
+        <div class="imgBx2">
+          <img src="./pic/yey.jpg">
+        </div>
+        <audio controls>
+          <source src="./music/Vishnu - Patrick Patrikios.mp3" type="audio/mp3">
+        </audio>
+        </div>
 
-    <div class="gallery">
-      <a href="./workoutmusic.html">
-      <img src="./pic/333.jpg" style="border-radius: 20%">
-      </a>
-    </div>
-
-    <div class="gallery">
-      <a href="./moodmusic.html">
-      <img src="./pic/444.jpg" style="border-radius: 20%">
-      </a>
-    </div>
-
-    <div class="gallery">
-      <a href="./popmusic.html">
-      <img src="./pic/555.jpg" style="border-radius: 20%">
-      </a>
-    </div>
-
-    <div class="gallery">
-      <a href="./chillmusic.html">
-      <img src="./pic/666.jpg" style="border-radius: 20%">
-      </a>
-    </div>
-
-    <div class="gallery">
-      <a href="./classicmusic.html">
-      <img src="./pic/777.jpg" style="border-radius: 20%">
-      </a>
-    </div>
-
-    <div class="gallery">
-      <a href="./cookingdining.html">
-      <img src="./pic/888.jpg" style="border-radius: 20%">
-      </a>
-    </div>
-
-  </div>
+        <div class="player3">
+           <div class="imgBx3">
+             <img src="./pic/hmm.jpg">
+           </div>
+           <audio controls>
+             <source src="./music/On Foot - Underbelly & Ty Mayer.mp3" type="audio/mp3">
+           </audio>
+           </div>
 
 
+           <div class="player4">
+              <div class="imgBx4">
+                <img src="./pic/qwe.jpg">
+              </div>
+              <audio controls>
+                <source src="./music/Checkmate - Nathan Moore.mp3" type="audio/mp3">
+              </audio>
+              </div>
+
+              <div class="player5">
+                 <div class="imgBx5">
+                   <img src="./pic/poi.jpg">
+                 </div>
+                 <audio controls>
+                   <source src="./music/Metamorphosis - Quincas Moreira.mp3" type="audio/mp3">
+                 </audio>
+                 </div>
+
+                 <div class="player6">
+                    <div class="imgBx6">
+                      <img src="./pic/wty.jpg">
+                    </div>
+                    <audio controls>
+                      <source src="./music/Unrest - ELPHNT.mp3" type="audio/mp3">
+                    </audio>
+                    </div>
+
+                    <div class="player7">
+                       <div class="imgBx7">
+                         <img src="./pic/mountain.jpg">
+                       </div>
+                       <audio controls>
+                         <source src="./music/Timelapsed Tides - Asher Fulero.mp3" type="audio/mp3">
+                       </audio>
+                       </div>
+
+                       <div class="player8">
+                          <div class="imgBx8">
+                            <img src="./pic/pol.jpg">
+                          </div>
+                          <audio controls>
+                            <source src="./music/Alone - Emmit Fenn.mp3" type="audio/mp3">
+                          </audio>
+                          </div>
+
+                          <div class="player9">
+                             <div class="imgBx9">
+                               <img src="./pic/moon.jpg">
+                             </div>
+                             <audio controls>
+                               <source src="./music/Liquid Time - Aakash Gandhi.mp3" type="audio/mp3">
+                             </audio>
+                             </div>
+
+                             <div class="player10">
+                                <div class="imgBx10">
+                                  <img src="./pic/road.jpg">
+                                </div>
+                                <audio controls>
+                                  <source src="./music/Wide Awake - The 126ers.mp3" type="audio/mp3">
+                                </audio>
+                                </div>
+
+                                <div class="player11">
+                                   <div class="imgBx11">
+                                     <img src="./pic/snow.jpg">
+                                   </div>
+                                   <audio controls>
+                                     <source src="./music/Slowly Until We Get There - Joey Pecoraro.mp3" type="audio/mp3">
+                                   </audio>
+                                   </div>
+
+                                   <div class="player12">
+                                      <div class="imgBx12">
+                                        <img src="./pic/view.jpg">
+                                      </div>
+                                      <audio controls>
+                                        <source src="./music/The Rising - Aakash Gandhi.mp3" type="audio/mp3">
+                                      </audio>
+                                      </div>
 
 
 
   </body>
+
+  <footer><h1>New music will come soon.</h1></footer>
 
 </html>
