--- a/musics.html
+++ b/musics.html
@@ -3,7 +3,7 @@
 
   <head>
     <title>Musics</title>
-    <link rel="stylesheet" type="text/css" href="musiccss/musics.css">
+    <link rel="stylesheet" type="text/css" href="./musiccss/musics.css">
     <link rel="shortcut icon" type="image/x-icon" href="./pic/finallogo.png">
   </head>
 
