--- a/Desktop/update/aboutme.html
+++ b/Desktop/update/aboutme.html
@@ -4,6 +4,7 @@
     <title>How to use</title>
     <link rel="stylesheet" type="text/css" href="./aboutmecss/aboutme.css">
     <link rel="shortcut icon" type="image/x-icon" href="./pic/finallogooo.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
   </head>
 
   <body>
