--- a/Desktop/update/namaz.html
+++ b/Desktop/update/namaz.html
@@ -4,6 +4,7 @@
     <title>Namaz</title>
     <link rel="stylesheet" type="text/css" href="./namazcss/namaz.css">
     <link rel="shortcut icon" type="image/x-icon" href="./pic/finallogooo.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
   </head>
 
   <body>
