--- a/Desktop/update/prayingtime.html
+++ b/Desktop/update/prayingtime.html
@@ -4,6 +4,7 @@
 <head>
   <title>Praying time</title>
   <link rel="stylesheet" type="text/css" href="./preyingtime.css/prayingtime.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 </head>
 
 <body>
